methods.basics.Methods.scala.error
Erreur de compilation :
Methods:3: error: '<-' expected but ')' found.
  for (i>-1 to 6) {
                ^Methods:18: error: illegal start of simple expression
}}
 ^